--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -258,7 +258,7 @@
                                         </a>
                                     </li> 
                                     <li >
-                                        <a href="#">
+                                        <a href="{% url 'tools' %}">
                                             <i class="fa fa-wrench"></i>
                                             <span class="menu-title">
                                                 <strong>Tools</strong>
