--- a/users/templates/add_tool.html
+++ b/users/templates/add_tool.html
@@ -6,7 +6,7 @@
                     
 					<div class="panel">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Add new customers</h3>
+                                    <h3 class="panel-title">Add new tool</h3>
                                 </div>
                     
                                 <!--Block Styled Form -->
