--- a/users/templates/tools.html
+++ b/users/templates/tools.html
@@ -20,7 +20,7 @@
 
                                         <div class="btn-group">
                                             <div class="form-group">
-                                        <form class="form-inline my-2 my-lg-0" action="{% url 'customers'%}">
+                                        <form class="form-inline my-2 my-lg-0" action="{% url 'tools'%}">
                                         <input id="demo-input-search2" type="text" name="search" placeholder="Search by Fisrtname" class="form-control" autocomplete="off">
                                         <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
                                         </form>
