--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -222,7 +222,7 @@
                                         </a>
                                     </li>
                                     <li >
-                                        <a href="#">
+                                        <a href="{% url 'Subscriptions' %}">
                                             <i class="fa fa-braille"></i>
                                             <span class="menu-title">
                                                 <strong>Subscription</strong>
@@ -231,7 +231,7 @@
                                         </a>
                                     </li>
                                      <li >
-                                        <a href="#">
+                                        <a href="{% url 'instalment'%}">
                                             <i class="fa fa-address-card"></i>
                                             <span class="menu-title">
                                                 <strong>Now instalment</strong>
@@ -248,15 +248,6 @@
                                             </span>
                                         </a>
                                     </li>
-                                    <li >
-                                        <a href="#">
-                                            <i class="fa fa-address-book-o"></i>
-                                            <span class="menu-title">
-                                                <strong>Invoice</strong>
-                                                
-                                            </span>
-                                        </a>
-                                    </li> 
                                     <li >
                                         <a href="{% url 'Meters' %}">
                                             <i class="fa fa-tint"></i>
