--- a/users/templates/requestor.html
+++ b/users/templates/requestor.html
@@ -6,7 +6,7 @@
                     
 					<div class="panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Customers</h3>
+                            <h3 class="panel-title">Requests</h3>
                         </div>
                     
                         <!--Data Table-->
@@ -16,13 +16,11 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                        <a href="{% url 'add_tool' %}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a>
-
                                         <div class="btn-group">
                                             <div class="form-group">
-                                        <form class="form-inline my-2 my-lg-0" action="{% url 'tools'%}">
-                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by Fisrtname" class="form-control" autocomplete="off">
-                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                                        <form class="form-inline my-2 my-lg-0" action="{% url 'requestor'%}">
+                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by Names" class="form-control" autocomplete="off">
+                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                                         </form>
                                         </div>
                                    
@@ -36,26 +34,30 @@
                                     <thead>
                                         <tr>
                                             <th class="text-left">ID</th>
-                                            <th>Title</th>
-                                            <th>Serial Number</th>
-                                            <th>Category</th>
-                                            <th>Amount</th>
-                                            <th>Description</th>
-                                            <th>created at</th>
+                                            <th>Names</th>
+                                            <th>ID Number</th>
+                                            <th>Phone Number</th>
+                                            <th>Province</th>
+                                            <th>District</th>
+                                            <th>Sector</th>
+                                            <th>Cell</th>
+                                            <th>Send at</th>
                                             
                                             
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    {% for tool in page_obj %}
+                                    {% for request in page_obj %}
                                     <tr>
-                                            <td><a class="btn-link" href="#">{{tool.id}}</a></td>
-                                            <td>{{tool.Title}}</td>
-                                            <td>{{tool.SerialNumber}}</td>
-                                            <td>{{tool.CategoryID}}</td>
-                                            <td>{{tool.Amount}}</td>
-                                            <td>{{tool.Description}}</td>
-                                            <td>{{tool.created_at}}</td>
+                                            <td><a class="btn-link" href="#">{{request.id}}</a></td>
+                                            <td>{{request.Names}}</td>
+                                            <td>{{request.Idnumber}}</td>
+                                            <td>{{request.phonenumber}}</td>
+                                            <td>{{request.Province}}</td>
+                                            <td>{{request.District}}</td>
+                                            <td>{{request.Sector}}</td>
+                                            <td>{{request.Cell}}</td>
+                                            <td>{{request.send_at}}</td>
 
                                            
                                             
