--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -16,7 +16,7 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                        <a href="" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a>
+                                        <a href="{% url 'add_subscription'%}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a>
 
                                         <div class="btn-group">
                                             <div class="form-group">
@@ -37,22 +37,22 @@
                                         <tr>
                                             <th class="text-left">ID</th>
                                             <th>Customer</th>
-                                            <th>Services</th>
-                                            <th>Tools</th>
+                                            <th>From</th>
                                             <th>Total amount</th>
-                                            <th>Sub date</th>
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                     
+                                    {% for sub in subscriptions %}
                                     <tr>
-                                            <td><a class="btn-link" href="#">1</a></td>
-                                            <td>Aimable Rukundo</td>
-                                            <td>INuma</td>
-                                            <td>Robinet,Pipes</td>
-                                            <td>150,000 RWF</td>
-                                            <td>22-12-2020</td>
+                                            <td><a class="btn-link" href="#">{{sub.id}}</a></td>
+                                            <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
+                                            <td>{{sub.From}}</td>
+                                            <td>{{sub.get_total_amount}}</td>
+                                            <td> <button class="btn btn-success">View</button></td>
                                     </tr>
+                                    {% endfor %}
 
                                     
                                         
